--- a/src/empty-state/empty-state.scss
+++ b/src/empty-state/empty-state.scss
@@ -20,17 +20,8 @@
   margin-top: 4rem;
 }
 
-:host /deep/ ign-button-group {
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 1.5rem;
-}
-
-// backwards compat
 :host /deep/ ign-button-group,
-:host /deep/ nu-button-group,
-:host /deep/ mat-card-actions
- {
+:host /deep/ mat-card-actions {
   justify-content: center;
   align-items: center;
   margin-bottom: 1.5rem;
