--- a/src/card/card-title/card-title.scss
+++ b/src/card/card-title/card-title.scss
@@ -1,6 +1,16 @@
 @import '~@angular/material/theming';
 
-.mat-card-title.ign-card-title {
+:host {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.mat-card-title.ign-card-title{
   font-weight: 400;
   margin-bottom: 32px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
