--- a/src/card/card-toolbar/card-toolbar.scss
+++ b/src/card/card-toolbar/card-toolbar.scss
@@ -11,6 +11,7 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+  align-self: flex-start;
 }
 
 :host /deep/ button {
