--- a/demo-app/app/app.component.scss
+++ b/demo-app/app/app.component.scss
@@ -1,3 +1,27 @@
 .sidenav {
   width: 200px;
+  margin-top: 0px;
+  background-color: white;
+}
+
+.mat-drawer-container {
+  background-color: white;
+}
+
+.mat-toolbar .mat-toolbar-row {
+  display: flex;
+  box-sizing: border-box;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  white-space: nowrap;
+}
+
+.mat-toolbar, .mat-toolbar h1, .mat-toolbar h2, .mat-toolbar h3, .mat-toolbar h4, .mat-toolbar h5, .mat-toolbar h6 {
+  font: 500 20px/32px Avenir,Roboto,Helvetica Neue,sans-serif;
+  margin: 0;
+}
+
+.mat-elevation-z5 {
+  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 5px 8px 0 rgba(0,0,0,.14), 0 1px 14px 0 rgba(0,0,0,.12);
 }
