--- a/demo-app/app/app.component.scss
+++ b/demo-app/app/app.component.scss
@@ -25,3 +25,8 @@
 .mat-elevation-z5 {
   box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 5px 8px 0 rgba(0,0,0,.14), 0 1px 14px 0 rgba(0,0,0,.12);
 }
+
+.mat-card{
+  min-height: 100vh;
+  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 5px 8px 0 rgba(0,0,0,.14), 0 1px 14px 0 rgba(0,0,0,0);
+}
