--- a/demo-app/app/demo/demo-checkbox/demo-checkbox.css
+++ b/demo-app/app/demo/demo-checkbox/demo-checkbox.css
@@ -4,15 +4,15 @@
 
 /* Styles for the ink bar */
 .mat-ink-bar {
-    background-color: darkgreen !important;
+    background-color: green !important;
 }
 
 .mat-checkbox.mat-accent.mat-radio-checked .mat-radio-outer-circle {
-    border-color: darkgreen;
+    border-color: green;
 }
 
 .mat-checkbox.mat-accent .mat-radio-inner-circle {
-    background-color: darkgreen;
+    background-color: green;
 }
 
 
@@ -21,14 +21,35 @@
 }
 
 .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background{
-    background-color: darkgreen !important;
+    background-color: green !important;
+}
+
+.mat-tab-group.mat-primary .mat-tab-label:focus{
+    background-color: rgba(8, 149, 8, 0.3)
 }
 
 #bodyContainer{
     font: 500 20px/32px Avenir,Roboto,Helvetica Neue,sans-serif;
     font-size: 15px;
+    font-weight: normal;
 }
 
 a{
-    color: darkgreen;
+    color: green;
+}
+
+h1{
+    font-size: 25px;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+h2{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+ul{
+    list-style-type:disc!important;
+    padding: 10px 10px 10px 25px;
 }
