--- a/demo-app/app/demo/demo-dialog/demo-dialog.css
+++ b/demo-app/app/demo/demo-dialog/demo-dialog.css
@@ -3,14 +3,35 @@
 }
 
 .mat-ink-bar {
-    background-color: darkgreen !important;
+    background-color: green !important;
 }
 
-a{
-    color: darkgreen;
+.mat-tab-group.mat-primary .mat-tab-label:focus{
+    background-color: rgba(8, 149, 8, 0.3)
 }
 
 #bodyContainer{
     font: 500 20px/32px Avenir,Roboto,Helvetica Neue,sans-serif;
     font-size: 15px;
+    font-weight: normal;
+}
+
+a{
+    color: green;
+}
+
+h1{
+    font-size: 25px;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+h2{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+ul{
+    list-style-type:disc!important;
+    padding: 10px 10px 10px 25px;
 }
