--- a/demo-app/styles.scss
+++ b/demo-app/styles.scss
@@ -174,3 +174,19 @@ span {
 .flag.flag-us {
   background-position: -312px -312px;
 }
+
+h1{
+  font-size: 25px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+h2{
+  font-size: 20px;
+  font-weight: bold;
+}
+
+ul{
+  list-style-type:disc!important;
+  padding: 10px 10px 10px 25px;
+}
