--- a/demo-app/app/app.component.scss
+++ b/demo-app/app/app.component.scss
@@ -30,3 +30,7 @@
   min-height: 100vh;
   box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 5px 8px 0 rgba(0,0,0,.14), 0 1px 14px 0 rgba(0,0,0,0);
 }
+
+.mat-tab-group.mat-primary .mat-tab-label:focus{
+  background-color: rgba(8, 149, 8, 0.3) !important;
+}
