--- a/demo-app/app/demo/demo-icon/demo-icon.css
+++ b/demo-app/app/demo/demo-icon/demo-icon.css
@@ -1,13 +1,14 @@
-.tabHeight{
+.tabHeight {
     padding: 16px;
 }
 
+/* Styles for the ink bar */
 .mat-ink-bar {
     background-color: green !important;
 }
 
 .mat-tab-group.mat-primary .mat-tab-label:focus{
-    background-color: rgba(8, 149, 8, 0.3) !important;
+    background-color: rgba(8, 149, 8, 0.3)
 }
 
 #bodyContainer{
@@ -34,13 +35,4 @@ h2{
 ul{
     list-style-type:disc!important;
     padding: 10px 10px 10px 25px;
-}
-
-ign-list-content{
-    position: relative !important;
-    height: 50% !important;
-}
-
-.mat-raised-button.mat-accent, .mat-fab.mat-accent, .mat-mini-fab.mat-accent{
-    background-color: green;
 }
