--- a/demo-app/app/app.component.html
+++ b/demo-app/app/app.component.html
@@ -6,6 +6,8 @@
         <a [routerLink]="[item.route]">{{ item.name }}</a>
       </li>
     </ul>
+
+    <ign-center>Questions? <a href="https://ultimatesoftware.slack.com/messages/docsitequestions/" target="_blank">Ask here!</a></ign-center>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-card>
