--- a/demo-app/app/demo/demo-list-content/demo-list-content.css
+++ b/demo-app/app/demo/demo-list-content/demo-list-content.css
@@ -1,46 +1,3 @@
-.tabHeight{
-    padding: 16px;
-}
-
-.mat-ink-bar {
-    background-color: green !important;
-}
-
-.mat-tab-group.mat-primary .mat-tab-label:focus{
-    background-color: rgba(8, 149, 8, 0.3) !important;
-}
-
-#bodyContainer{
-    font: 500 20px/32px Avenir,Roboto,Helvetica Neue,sans-serif;
-    font-size: 15px;
-    font-weight: normal;
-}
-
-a{
-    color: green;
-}
-
-h1{
-    font-size: 25px;
-    font-weight: bold;
-    text-decoration: underline;
-}
-
-h2{
-    font-size: 20px;
-    font-weight: bold;
-}
-
-ul{
-    list-style-type:disc!important;
-    padding: 10px 10px 10px 25px;
-}
-
-ign-list-content{
-    position: relative !important;
-    height: 50% !important;
-}
-
-.mat-raised-button.mat-accent, .mat-fab.mat-accent, .mat-mini-fab.mat-accent{
-    background-color: green;
+.mat-tab-body{
+    min-height: 20vh;
 }
