--- a/demo-app/styles.scss
+++ b/demo-app/styles.scss
@@ -175,18 +175,86 @@ span {
   background-position: -312px -312px;
 }
 
-h1{
-  font-size: 25px;
-  font-weight: bold;
-  text-decoration: underline;
+//Customized THEME START
+html, body, p, img, menu, nav, ul, ol, li{
+  vertical-align: baseline;
+  padding-bottom: .4rem;
 }
 
-h2{
-  font-size: 20px;
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 40px;
+}
+
+#body-container {
+  padding: 24px 48px 48px 48px;
+  min-height: 100vh;
+}
+
+.tabHeight {
+  padding: 16px;
+}
+
+h1 {
+  display: block;
+  font-size: 2em;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
   font-weight: bold;
 }
 
-ul{
-  list-style-type:disc!important;
-  padding: 10px 10px 10px 25px;
+h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
+h3 {
+  display: block;
+  font-size: 1.17em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
+h4 {
+  display: block;
+  margin-top: 1.33em;
+  margin-bottom: 1.33em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
+h5 {
+  display: block;
+  font-size: .83em;
+  margin-top: 1.67em;
+  margin-bottom: 1.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
+h6 {
+  display: block;
+  font-size: .67em;
+  margin-top: 2.33em;
+  margin-bottom: 2.33em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
 }
