working on testing documentation

--- a/demo-app/app/app.component.html
+++ b/demo-app/app/app.component.html
@@ -6,7 +6,12 @@
         <a [routerLink]="[item.route]">{{ item.name }}</a>
       </li>
     </ul>
-
+    <ign-center>Testing</ign-center>
+    <ul>
+      <li>
+        
+      </li>
+    </ul>
     <ign-center>Questions? <a href="https://ultimatesoftware.slack.com/messages/docsitequestions/" target="_blank">Ask here!</a></ign-center>
   </mat-sidenav>
   <mat-sidenav-content>
