--- a/demo-app/app/testing/event-handlers/event-handlers.component.html
+++ b/demo-app/app/testing/event-handlers/event-handlers.component.html
@@ -1,1 +1,37 @@
-<h1>event handlers</h1>
+<div id="body-container">
+    <h1>Angular Testing - Triggering Event Handlers</h1>
+    <hr />
+
+    <h2>1. Trigger Event Handler on DebugElement</h2>
+    <pre>
+        <code class="code-block">
+            it('should emit clicked event', () => {{ '{' }}
+                de = fixture.debugElement.query(By.css('a'));
+                let spy = jest.fn();
+
+                component.clicked.subscribe(spy);
+                de.triggerEventHandler('click', null);
+                fixture.detectChanges();
+
+                expect(spy).toHaveBeenCalled();
+            });
+        </code>
+    </pre>
+
+    <h2>2. DispatchEvent on NativeElement</h2>
+    <pre>
+        <code class="code-block">
+            it('should emit clicked event', () => {{ '{' }}
+                de = fixture.debugElement.query(By.css('a'));
+                ne = de.nativeElement;
+                let spy = jest.fn();
+
+                component.clicked.subscribe(spy);
+                ne.dispatchEvent(new Event('click'));
+                fixture.detectChanges();
+
+                expect(spy).toHaveBeenCalled();
+            });
+        </code>
+    </pre>
+</div>
