--- a/demo-app/app/testing/resources/resources.component.html
+++ b/demo-app/app/testing/resources/resources.component.html
@@ -1,1 +1,17 @@
-<h1>resources</h1>
+<div id="body-container">
+    <h1>Angular Testing - Resources</h1>
+    <hr />
+
+    <h2>1. Jest</h2>
+    <p>a. <a href="https://facebook.github.io/jest/docs/en/getting-started.html#content">https://facebook.github.io/jest/docs/en/getting-started.html#content</a></p>
+    <p>b. <a href="https://www.xfive.co/blog/testing-angular-faster-jest/">https://www.xfive.co/blog/testing-angular-faster-jest/</a></p>
+
+    <h2>2. Angular Testing</h2>
+    <p>a. <a href="https://angular.io/guide/testing">https://angular.io/guide/testing</a></p>
+    <p>b. <a href="https://vsavkin.com/three-ways-to-test-angular-2-components-dcea8e90bd8d">https://vsavkin.com/three-ways-to-test-angular-2-components-dcea8e90bd8d</a></p>
+    <p>c. <a href="http://onehungrymind.com/writing-basic-component-test-angular-testing-utilities/">http://onehungrymind.com/writing-basic-component-test-angular-testing-utilities/</a></p>
+
+    <h2>3. Patterns</h2>
+    <p>a. <a href="https://www.typemock.com/unit-test-patterns-for-net">https://www.typemock.com/unit-test-patterns-for-net</a></p>
+    <p>b. <a href="http://www.c-sharpcorner.com/UploadFile/dacca2/fundamental-of-unit-testing-understand-aaa-in-unit-testing/">http://www.c-sharpcorner.com/UploadFile/dacca2/fundamental-of-unit-testing-understand-aaa-in-unit-testing/</a></p>
+</div>
