--- a/demo-app/app/testing/snapshot/snapshot.component.html
+++ b/demo-app/app/testing/snapshot/snapshot.component.html
@@ -1,108 +1,33 @@
 <div id="body-container">
-    <h1>Test Types</h1>
-    <p>This is a high-level description of the different types of tests that are done in relation to Angular.</p>
+    <h1>Angular Testing - Snapshot Testing</h1>
     <hr />
 
-    <h2>Unit Tests</h2>
-    <p>Test the JavaScript file in isolation and mock out services as you need them. Unit Tests don't use the Angular Testing Utilities. (*.unit.spec.ts)</p>
+    <h2>Snapshot Tests have to be deterministic</h2>
+    <p>Set component data members that are in template to static values (ex. Date.now() would be different every run).</p>
     <pre>
         <code class="code-block">
-            describe('AppComponent', () => {{ '{' }}
-                let component: AppComponent;
+            it('should match snapshot', async () => {{ '{' }}
+                component.description = 'test description';
+                Date.now = jest.fn(() => 1482363367071);
 
-                beforeEach(() => {{ '{' }}
-                    component = new AppComponent();
-                });
+                await fixture.detectChanges();
 
-                it('should be truthy', () => {{ '{' }}
-                    expect(component).toBeTruthy();
-                });
+                expect(fixture).toMatchSnapshot();
             });
         </code>
     </pre>
 
-    <h2>Integration Tests</h2>
-    <p>Use the Angular Testing Utilities to generate the Angular environment to test. Check JavaScript integration with the template. Mock out services as you need them. (*.spec.ts)</p>
+    <p>Now we can expect this date value to consistently return the same value every run.</p>
     <pre>
         <code class="code-block">
-            describe('AppComponent', () => {{ '{' }}
-                let fixture: ComponentFixture&lt;AppComponent&gt;;
-                let component: AppComponent;
-
-                beforeEach(async () => {{ '{' }}
-                    await TestBed.configureTestingModule({{ '{' }}
-                        declarations: [AppComponent],
-                        imports: [],
-                        providers: []
-                    }).compileComponents();
-                });
-
-                beforeEach(() => {{ '{' }}
-                    fixture = TestBed.createComponent(AppComponent);
-                    component = fixture.componentInstance;
-
-                    fixture.detectChanges();
-                });
-
-                it('should be truthy', () => {{ '{' }}
-                    expect(component).toBeTruthy();
-                });
-            });
-        </code>
-    </pre>
-
-    <h2>End 2 End Tests</h2>
-    <p>Testing the application as a whole. Simulate a user through real world scenarios. (*.e2e-spec.ts)</p>
-    <pre>
-        <code class="code-block">
-            describe('test-app1 App', () => {{ '{' }}
-                let page: AppPage;
-
-                beforeEach(() => {{ '{' }}
-                    page = new AppPage();
-                });
-
-                it('should display welcome message', () => {{ '{' }}
-                    page.navigateTo();
-
-                    expect(page.getParagraphTest()).toEqual('Welcome to app!');
-                });
-            });
-        </code>
-    </pre>
-
-    <h2>Snapshot Testing</h2>
-    <p>Will serialize component and create reference image. When snapshot test is run, it will fail if the two images do not match. (*.spec.ts)</p>
-    <pre>
-        <code class="code-block">
-            exports[`renders correctly 1`] = `
+            &lt;div class="date-output"&gt;{{ '{' }}{{ '{' }} date }}&lt;/div&gt;
             &lt;a
-                className="normal"
-                href="http://www.facebook.com"
-                onMouseEnter={{ '{' }}[Function]}
-                onMouseLeave={{ '{' }}[Function]}
+                (click)="handleClick($event)"
+                class="app-link"
             &gt;
-                Facebook
-                &lt;/a&gt;
-            `;
-        </code>
-    </pre>
-    <pre>
-        <code class="code-block">
-            Received value does not match stored snapshot 1.
-
-            - Snapshot
-            + Received
-
-            &gt;a
-                className="normal"
-            -   href="http://facebook.com"
-            +   href="http://instagram.com"
-                onMouseEnter={{ '{' }}[Function]}
-                onMouseLeave={{ '{' }}[Function]}&gt;
-            -   Facebook
-            +   Instagram
-            &lt;a&gt;
+                &lt;i class="material-icons app-link-icon" aria-hidden="true"&gt;{{ '{' }}{{ '{' }} icon }}&lt;/i&gt;
+                &lt;div class="app-link-text"&gt;{{ '{' }}{{ '{' }} description }}&lt;/div&gt;
+            &lt;/a&gt;
         </code>
     </pre>
 </div>
