--- a/src/field/field.component.scss
+++ b/src/field/field.component.scss
@@ -15,3 +15,18 @@ $field-label-font-size: 0.85rem;
 .value {
   word-wrap: break-word;
 }
+
+.flex-lable-value {
+  flex-grow: 2;
+}
+
+.label-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.mat-icon-button {
+  height: 24px;
+  width: 24px;
+  line-height: normal;
+}
