--- a/demo-app/app/testing/components/status/status.component.css
+++ b/demo-app/app/testing/components/status/status.component.css
@@ -1,56 +1,95 @@
 .status-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 4fr 1fr 4fr 1fr 4fr;
+    grid-template-rows: .25fr 4fr .25fr 4fr .25fr 4fr;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
+    grid-template-areas:
+        "header header"
+        "content1 content2"
+        "activity activity"
+        "content3 content4"
+        "builds builds"
+        "content5 content6";
+    justify-content: space-around;
 }
 
 .a {
-    grid-column: 1 / span 2;
-    grid-row: 1;
+    grid-area: header;
     text-align: center;
     border-bottom: 5px
 }
 
 .b {
-    grid-column: 1;
-    grid-row: 2;
+    grid-area: content1;
 }
 
 .c {
-    grid-column: 2;
-    grid-row: 2;
+    grid-area: content2;
+    display: grid;
+    align-items: stretch;
+    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 2fr 2fr 1fr;
+    grid-template-areas: 
+        "header header"
+        "author branch"
+        "commit commit"
+        "footer footer";
+}
+
+.c1 {
+    grid-area: header;
+    border: 1px solid black;
+    background-color: red;
+}
+
+.c2 {
+    grid-area: author;
+    border: 1px solid black;
+    background-color: red;
+}
+
+.c3 {
+    grid-area: branch;
+    border: 1px solid black;
+    background-color: red;
+}
+
+.c4 {
+    grid-area: commit;
+    border: 1px solid black;
+    background-color: red;
+}
+
+.c5 {
+    grid-area: footer;
+    border: 1px solid black;
+    justify-self: start;
 }
 
 .d {
-    grid-column: 1 / span 2;
-    grid-row: 3;
+    grid-area: activity;
     text-align: center;
 }
 
 .e {
-    grid-column: 1;
-    grid-row: 4;
+    grid-area: content3;
 }
 
 .f {
-    grid-column: 2;
-    grid-row: 4;
+    grid-area: content4;
 }
 
 .g {
-    grid-column: 1 / span 2;
-    grid-row: 5;
+    grid-area: builds;
     text-align: center;
 }
 
 .h {
-    grid-column: 1;
-    grid-row: 6;
+    grid-area: content5;
 }
 
 .i {
-    grid-column: 2;
-    grid-row: 6;
+    grid-area: content6;
 }
