--- a/demo-app/app/testing/components/status/status.component.css
+++ b/demo-app/app/testing/components/status/status.component.css
@@ -76,27 +76,47 @@
 .e {
     grid-area: content3;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 3fr;
+    grid-gap: 10px;
+    grid-template-columns: 0.5fr 2fr;
+    grid-template-rows: 0.5fr 2fr;
+    grid-template-areas: 
+        "header header"
+        "image commit";
 }
 
 .e1 {
-    grid-column: 1 / span 2;
-    grid-row: 1;
+    grid-area: header;
 }
 
 .e2 {
-    grid-column: 1;
-    grid-row: 2;
+    grid-area: image;
 }
 
 .e3 {
-    grid-column: 2;
-    grid-row: 2;
+    grid-area: commit;
 }
 
 .f {
     grid-area: content4;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 0.5fr 2fr;
+    grid-template-rows: 0.5fr 2fr;
+    grid-template-areas: 
+        "header header"
+        "image commit";
+}
+
+.f1 {
+    grid-area: header;
+}
+
+.f2 {
+    grid-area: image;
+}
+
+.f3 {
+    grid-area: commit;
 }
 
 .g {
