--- a/demo-app/app/testing/components/status/status.component.html
+++ b/demo-app/app/testing/components/status/status.component.html
@@ -37,7 +37,9 @@
     </mat-card>
 
     <mat-card class="e">
-        <h1 class="e1">MASTER Branch</h1>
+        <div class="e1">
+            <h1>MASTER Branch</h1>
+        </div>
         <div class="e2">          
             <img src="{{ masterBranch.latestCommit.author.avatarUrl }}">
         </div>
@@ -45,12 +47,23 @@
             <p>Latest Commit by: {{ masterBranch.latestCommit.author.displayName }}</p>
             <p>Email: {{ masterBranch.latestCommit.author.emailAddress }}</p>
             <p>Commit Message:</p>
-            <p>{{ masterBranch.latestCommit.message }}</p>
+            <p>{{ masterBranch.latestCommit.message.split('\':')[1] }}</p>
         </div>
     </mat-card>
 
     <mat-card class="f">
-        <h1>DEVELOP</h1>
+        <div class="f1">
+            <h1>DEVELOP Branch</h1>
+        </div>
+        <div class="f2">          
+            <img src="{{ developBranch.latestCommit.author.avatarUrl }}">
+        </div>
+        <div class="f3">
+            <p>Latest Commit by: {{ developBranch.latestCommit.author.displayName }}</p>
+            <p>Email: {{ developBranch.latestCommit.author.emailAddress }}</p>
+            <p>Commit Message:</p>
+            <p>{{ developBranch.latestCommit.message.split('\':')[1] }}</p>
+        </div>
     </mat-card>
 
     <mat-card class="g">
