Initial setup of builds

--- a/demo-app/app/testing/components/status/status.component.css
+++ b/demo-app/app/testing/components/status/status.component.css
@@ -126,8 +126,48 @@
 
 .h {
     grid-area: content5;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 2fr 1fr;
+    grid-template-areas: 
+        "header"
+        "m-content"
+        "concourse";
+}
+
+.h1 {
+    grid-area: header;
+}
+
+.h2 {
+    grid-area: m-content;
+}
+
+.h3 {
+    grid-area: concourse;
 }
 
 .i {
     grid-area: content6;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 2fr 1fr;
+    grid-template-areas: 
+        "header"
+        "d-content"
+        "concourse";
+}
+
+.i1 {
+    grid-area: header;
+}
+
+.i2 {
+    grid-area: d-content;
+}
+
+.i3 {
+    grid-area: concourse;
 }
