created status dialog

--- a/demo-app/app/testing/components/status/status.component.css
+++ b/demo-app/app/testing/components/status/status.component.css
@@ -145,11 +145,10 @@
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 2fr 1fr;
+    grid-template-rows: 0.5fr 2fr;
     grid-template-areas: 
         "header"
-        "d-content"
-        "concourse";
+        "d-content";
 }
 
 .i1 {
@@ -158,8 +157,4 @@
 
 .i2 {
     grid-area: d-content;
-}
-
-.i3 {
-    grid-area: concourse;
 }
